we have developed the second gui screen and its reponse to search for the new user and show a message if you are not an existing user